WebShop.API/src/main/java/com/example/webshopapi/error/exception/CouponNotFoundException.java
package com.example.webshopapi.error.exception;

public class CouponNotFoundException extends RuntimeException {
    public CouponNotFoundException(String message) {
        super(message);
    }
}